<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page_background"
    tools:context=".MainActivity"
    >

    <EditText
        android:id="@+id/editText"
        android:layout_width="241dp"
        android:layout_height="62dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="238dp"
        android:layout_height="62dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/enter_ph_no"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="234dp"
        android:layout_height="64dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/enter_address"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="238dp"
        android:layout_height="62dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/enter_subject"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <Button
        android:id="@+id/button"
        android:layout_width="118dp"
        android:layout_height="60dp"
        android:background="@drawable/register_button_style"
        android:text="@string/register"
        android:textColor="#F8F9FC"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        app:layout_constraintVertical_bias="0.36"/>

</androidx.constraintlayout.widget.ConstraintLayout>